refactor(v6): complete content rename — strings, MCP tools, docs, checkstyle
- 349 files: bot→agent, package→workflow in strings/comments/params/docs
- MCP tool names, @ToolArg descriptions, REST method names, constants
- Checkstyle rewrite: removed noisy style checks, 697→81 violations
- Zero remaining old naming patterns across ALL file types
- 947 tests pass (0 failures, 0 errors)